@@ -4,6 +4,7 @@
 - minimum Perl 5.16
 - add OpenGL::Modern::Config like OpenGL::Config
 - add glpErrorString
+- add export tag :glewfunctions
 
 0.04     2017-08-06 12:06:13-04:00
 - Add module to allow OpenGL::Image to work with OpenGL::Modern
